@@ -1,8 +1,6 @@
 package com.example.sportcenterv1.service;
 
 import com.example.sportcenterv1.entity.Specialization;
-import com.example.sportcenterv1.entity.enums.CourtType;
-import com.example.sportcenterv1.entity.enums.TurfType;
 import com.example.sportcenterv1.entity.space.*;
 import com.example.sportcenterv1.repository.SpaceRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -12,7 +10,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
+import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -26,110 +28,123 @@ class SpaceServiceTest {
     @InjectMocks
     private SpaceService spaceService;
 
-    private BasketballRoom basketballRoom;
-    private SwimmingPool swimmingPool;
-    private Specialization specialization;
+    private Space space1;
+    private Space space2;
 
     @BeforeEach
     void setUp() {
-        specialization = new Specialization();
-        specialization.setId(1L);
-        specialization.setName("Koszykówka");
+        space1 = new Room();
+        space1.setId(1L);
+        space1.setName("Room 1");
 
-        basketballRoom = new BasketballRoom();
-        basketballRoom.setId(1L);
-        basketballRoom.setName("Basketball Room 1");
-        basketballRoom.setCapacity(500);
-        basketballRoom.setSquareFootage(1000.0);
-        basketballRoom.setHoopCount(4);
-        basketballRoom.setCourtType(CourtType.WOOD);
-        basketballRoom.getSpecializations().add(specialization);
-
-        swimmingPool = new SwimmingPool();
-        swimmingPool.setId(2L);
-        swimmingPool.setName("Swimming Pool 1");
-        swimmingPool.setPoolLength(50.0);
-        swimmingPool.setPoolDepth(2.0);
-        swimmingPool.setLaneCount(8);
-        swimmingPool.getSpecializations().add(specialization);
+        space2 = new BasketballRoom();
+        space2.setId(2L);
+        space2.setName("Basketball Room 1");
     }
 
     @Test
     void testGetSpaceType() {
-        when(spaceRepository.findSpaceTypeById(1L)).thenReturn("BasketballRoom");
+        when(spaceRepository.findSpaceTypeById(1L)).thenReturn("Room");
 
         String result = spaceService.getSpaceType(1L);
-        assertEquals("BasketballRoom", result);
+        assertEquals("Room", result);
     }
 
     @Test
     void testGetSpace() {
-        when(spaceRepository.findById(1L)).thenReturn(Optional.of(basketballRoom));
+        when(spaceRepository.findById(1L)).thenReturn(Optional.of(space1));
 
         Optional<Space> result = spaceService.getSpace(1L);
         assertTrue(result.isPresent());
-        assertEquals("Basketball Room 1", result.get().getName());
+        assertEquals(space1, result.get());
     }
 
     @Test
     void testGetAllSpaces() {
-        List<Space> spaces = Arrays.asList(basketballRoom, swimmingPool);
+        List<Space> spaces = Arrays.asList(space1, space2);
         when(spaceRepository.findAll()).thenReturn(spaces);
 
         List<Space> result = spaceService.getAllSpaces();
         assertEquals(2, result.size());
-        assertEquals("Basketball Room 1", result.get(0).getName());
-        assertEquals("Swimming Pool 1", result.get(1).getName());
+        assertEquals(space1, result.get(0));
+        assertEquals(space2, result.get(1));
     }
 
     @Test
     void testGetAllSpacesBySpecialization() {
-        List<Space> spaces = Arrays.asList(basketballRoom, swimmingPool);
-        when(spaceRepository.findAll()).thenReturn(spaces);
+        Specialization specialization = new Specialization();
+        specialization.setId(1L);
+        specialization.setName("Specialization 1");
 
-        Set<Space> result = spaceService.getAllSpaceBySpecialization(List.of(specialization));
-        assertEquals(2, result.size());
+        space1.setSpecializations(Collections.singleton(specialization));
+        when(spaceRepository.findAll()).thenReturn(Arrays.asList(space1, space2));
+
+        List<Space> result = spaceService.getAllSpaces(specialization);
+        assertEquals(1, result.size());
+        assertEquals(space1, result.get(0));
     }
 
     @Test
-    void testGetAllSpacesBySpaceType() {
-        List<Space> spaces = Arrays.asList(basketballRoom);
-        when(spaceRepository.findSpacesByType("BasketballRoom")).thenReturn(spaces);
+    void testGetAllSpaceBySpecializationList() {
+        Specialization specialization = new Specialization();
+        specialization.setId(1L);
+        specialization.setName("Specialization 1");
 
-        List<Space> result = spaceService.getAllSpaces("BasketballRoom");
+        space1.setSpecializations(Collections.singleton(specialization));
+        when(spaceRepository.findAll()).thenReturn(Arrays.asList(space1, space2));
+
+        Set<Space> result = spaceService.getAllSpaceBySpecialization(Arrays.asList(specialization));
         assertEquals(1, result.size());
-        assertEquals("Basketball Room 1", result.get(0).getName());
+        assertTrue(result.contains(space1));
+    }
+
+    @Test
+    void testGetAllSpacesByType() {
+        when(spaceRepository.findSpacesByType("Room")).thenReturn(Collections.singletonList(space1));
+
+        List<Space> result = spaceService.getAllSpaces("Room");
+        assertEquals(1, result.size());
+        assertEquals(space1, result.get(0));
     }
 
     @Test
     void testCreateSpace() {
-        spaceService.createSpace(basketballRoom);
-        verify(spaceRepository, times(1)).save(basketballRoom);
+        spaceService.createSpace(space1);
+        verify(spaceRepository, times(1)).save(space1);
     }
 
     @Test
-    void testUpdateSpace_BasketballRoom() {
-        BasketballRoom updatedBasketballRoom = new BasketballRoom();
-        updatedBasketballRoom.setName("Updated Basketball Room");
-        updatedBasketballRoom.setCapacity(600);
-        updatedBasketballRoom.setSquareFootage(1200.0);
-        updatedBasketballRoom.setHoopCount(6);
-        updatedBasketballRoom.setCourtType(CourtType.SYNTHETIC);
+    void testUpdateSpace() {
+        Room updatedRoom = new Room();
+        updatedRoom.setName("Updated Room");
 
-        when(spaceRepository.findById(1L)).thenReturn(Optional.of(basketballRoom));
-        spaceService.updateSpace(1L, updatedBasketballRoom);
+        when(spaceRepository.findById(1L)).thenReturn(Optional.of(space1));
 
-        assertEquals("Updated Basketball Room", basketballRoom.getName());
-        assertEquals(600, basketballRoom.getCapacity());
-        assertEquals(1200.0, basketballRoom.getSquareFootage());
-        assertEquals(6, basketballRoom.getHoopCount());
-        assertEquals(CourtType.SYNTHETIC, basketballRoom.getCourtType());
-        verify(spaceRepository, times(1)).save(basketballRoom);
+        spaceService.updateSpace(1L, updatedRoom);
+
+        assertEquals("Updated Room", space1.getName());
+        verify(spaceRepository, times(1)).save(space1);
     }
 
     @Test
     void testDeleteSpace() {
         spaceService.deleteSpace(1L);
         verify(spaceRepository, times(1)).deleteById(1L);
+    }
+
+    @Test
+    void testUpdateBasketballRoom() {
+        BasketballRoom updatedBasketballRoom = new BasketballRoom();
+        updatedBasketballRoom.setName("Updated Basketball Room");
+        updatedBasketballRoom.setHoopCount(10);
+
+        when(spaceRepository.findById(2L)).thenReturn(Optional.of(space2));
+
+        boolean result = spaceService.updateBasketballRoom(2L, updatedBasketballRoom);
+        assertTrue(result);
+
+        assertEquals("Updated Basketball Room", ((BasketballRoom) space2).getName());
+        assertEquals(10, ((BasketballRoom) space2).getHoopCount());
+        verify(spaceRepository, times(1)).save(space2);
     }
 }
